fix(orga): wrong star alignment

--- a/orga/app/styles/components/campaign/charts/participants-by-stage.scss
+++ b/orga/app/styles/components/campaign/charts/participants-by-stage.scss
@@ -11,11 +11,8 @@
   }
 
   &__stars {
-    svg {
-      width: 18px;
-      height: 18px;
-    }
-
+    height: 1.5rem;
+    
     &--loader {
       height: 20px;
       min-width: 100px;
